# SliceTracker

./: CMakeLists.txt
ProstateCryoAblation/: ProstateCryoAblation.py
ProstateCryoAblation/ProstateCryoAblationUtils/steps/: intraOperativeTargeting.py
ProstateCryoAblation/ProstateCryoAblationUtils/steps/plugins/: case.py  results.py
ProstateCryoAblation/ProstateCryoAblationUtils/steps/plugins/segmentation/: automatic.py  manual.py
SliceTracker/: SliceTrackerRegistration.py
SliceTracker/Resources/: default.cfg
SliceTracker/Resources/ElastixRegistrationParameters/: Parameters_Affine.txt  Parameters_BSpline.txt  Parameters_Rigid.txt
SliceTracker/SliceTrackerUtils/: configuration.py  session.py  sessionData.py
SliceTracker/SliceTrackerUtils/algorithms/: automaticProstateSegmentation.py  registration.py
puml/: SliceTrackerRegistration.puml
